content/modules/ROOT/examples/health/bgd/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: bgd
  name: bgd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
